--- a/css/screen.css
+++ b/css/screen.css
@@ -6624,3 +6624,15 @@ body .preview-item-title > a:hover,
 .xdsoft_scroller_box{
 position:relative;
 }
+
+.error {
+  color: #a94442;
+  background-color: #f2dede;
+  border-color: #ebccd1;
+  padding:1px 20px 1px 20px;
+}
+
+label.error {
+  font-size: 0.8em;
+  background-color: white;
+}
